        with length 1 (which was introduced in 0.6).
        
    o   helper function round_ps which nicely rounds p-values
        is now exported.
        
    o   warning about numerical non-centered variables in mixed
        is now a message only.
        
    o   added examples data sets from Maxwell & Delaney (2004) for 
        within-subjects ANOVA and mixed models.
    
    Bugfixes
        
    o   the default effect size (ges: generalized eta-squared) was 
        calculated wrong (the error term for the intercept was not 
        included). Sorry. This is now corrected (with new examples).
    
    o   removed bug that aov.car didn't work when running some ANCOVAs
        (thanks to Gang Chen for reporting this).

        

                    ************************
                    ** afex VERSION 0.7-x **
                    ************************
                    
                    Changes in afex Version 0.7-x
                    Released December 2013

    Significant User Visible Changes and New Features

    o   nicer output of print.mixed
    
    Bugfixes
    
    o   mixed() correctly converts all non-formula arguments to 
        formula correctly to a formula (gave error if formula
        was a different object and not-available on cluster nodes).
        Prints message if formula is converted to a formula.
        
    o   Using multicore for fitting the models prodcued erroneous 
        results (did not use correct contrasts at nodes). Now the
        current contrasts are also set at the nodes.
        
    o   mixed() sets REML = FALSE if method = "LRT" and no 
        family argument is present (i.e., for LMMs) as LRTs
        for models fitted with REML are not recommended.
        
    o   on the cluster nodes now only the lme4 namespace is 
        loaded (instead of using library) to avoid a CRAN note.


                    ************************
                    ** afex VERSION 0.6-x **